--- a/assets/base.css
+++ b/assets/base.css
@@ -423,7 +423,7 @@ p {
   font-family: var(--font-heading-family);
   /* font-style: var(--font-heading-style); */
   /* font-weight: var(--font-heading-weight); */
-  letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
+  /* letter-spacing: calc(var(--font-heading-scale) * 0.06rem); */
   /* color: rgb(var(--color-foreground)); */
   
   /* color: rgb(var(--color-title)); TODO: make a global style*/ 
@@ -1307,7 +1307,6 @@ deferred-media {
 .button,
 .shopify-challenge__button,
 .customer button,
-button.shopify-payment-button__button--unbranded,
 .shopify-payment-button [role="button"],
 .cart__dynamic-checkout-buttons [role='button'],
 .cart__dynamic-checkout-buttons iframe {
@@ -1319,6 +1318,10 @@ button.shopify-payment-button__button--unbranded,
   --border-opacity: calc(1 - var(--buttons-border-opacity));
   border-radius: var(--buttons-radius-outset);
   position: relative;
+}
+
+button.shopify-payment-button__button--unbranded {
+  border-radius: 10px;
 }
 
 .button,
@@ -1981,15 +1984,15 @@ input[type='checkbox'] {
 
 /* component-quantity */
 .quantity {
-  color: rgba(var(--color-foreground));
   position: relative;
-  width: calc(14rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
+  width: calc(14rem / var(--font-body-scale) + var(--inputs-border-width));
   display: flex;
-  border-radius: var(--inputs-radius);
-  min-height: calc((var(--inputs-border-width) * 2) + 4.5rem);
+  min-height: 4rem;
+  border: 3px solid #F0DA6A;
+  border-radius: 17px;
 }
 
-.quantity:after {
+/* .quantity:after {
   pointer-events: none;
   content: '';
   position: absolute;
@@ -2002,7 +2005,7 @@ input[type='checkbox'] {
   box-shadow: 0 0 0 var(--inputs-border-width) rgba(var(--color-foreground), var(--inputs-border-opacity));
   transition: box-shadow var(--duration-short) ease;
   z-index: 1;
-}
+} */
 
 .quantity:before {
   background: rgb(var(--color-background));
@@ -2019,7 +2022,7 @@ input[type='checkbox'] {
 }
 
 .quantity__input {
-  color: currentColor;
+  color: #F0DA6A;
   font-size: 1.4rem;
   font-weight: 500;
   opacity: 0.85;
@@ -2047,13 +2050,13 @@ input[type='checkbox'] {
   padding: 0;
 }
 
-.quantity__button:first-child {
+/* .quantity__button:first-child {
   margin-left: calc(var(--inputs-border-width));
 }
 
 .quantity__button:last-child {
   margin-right: calc(var(--inputs-border-width));
-}
+} */
 
 .quantity__button svg {
   width: 1rem;
