--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -49,7 +49,7 @@
 .accordion__content {
   margin-bottom: 1.5rem;
   word-break: break-word;
-  overflow-x: auto;
+  /* overflow-x: auto; */
   padding: 0 0.6rem;
 }
 
