--- a/assets/base.css
+++ b/assets/base.css
@@ -426,7 +426,8 @@ p {
   /* letter-spacing: calc(var(--font-heading-scale) * 0.06rem); */
   /* color: rgb(var(--color-foreground)); */
   
-  /* color: rgb(var(--color-title)); TODO: make a global style*/ 
+  /* color: rgb(var(--color-title)); TODO: make a global style*/
+  letter-spacing: 0;
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
 }
@@ -1436,7 +1437,7 @@ button.shopify-payment-button__button--unbranded {
 .shopify-challenge__button,
 .customer button {
   font-size: 1.5rem;
-  letter-spacing: 0.1rem;
+  /* letter-spacing: 0.1rem; */
   line-height: calc(1 + 0.2 / var(--font-body-scale));
 }
 
@@ -2845,7 +2846,8 @@ details-disclosure > details {
 
 .global-media-settings {
   position: relative;
-  border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
+  /* border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity)); */
+  border-width: var(--media-border-width);
   border-radius: var(--media-radius);
   overflow: visible !important;
   background-color: rgb(var(--color-background));
