--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -95,7 +95,7 @@
       </div>
       <div class="right-section flex-1 text-center py-6 lg:py-20 flex justify-between flex-col">
         {%- if section.settings.write_us != blank -%}
-          <h3 class="font-bold main-yellow mb-4 lg:mb-0">{{ section.settings.write_us | escape }}</h3>
+          <h3 class="font-bold text-main-yellow mb-4 lg:mb-0">{{ section.settings.write_us | escape }}</h3>
         {%- endif -%}
 
 
