--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -42,12 +42,12 @@ menu-drawer > details[open] > summary::before {
   overflow-x: hidden;
   border-style: solid;
   border-color: rgba(var(--color-foreground), var(--drawer-border-opacity));
-  filter: drop-shadow(
+  /* filter: drop-shadow(
     var(--drawer-shadow-horizontal-offset)
     var(--drawer-shadow-vertical-offset)
     var(--drawer-shadow-blur-radius)
     rgba(var(--color-shadow), var(--drawer-shadow-opacity))
-  );
+  ); */
 }
 
 .js .menu-drawer {
@@ -98,7 +98,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 }
 
 .menu-drawer__navigation {
-  padding: 5.6rem 0;
+  padding: 1rem 0;
 }
 
 .menu-drawer__inner-submenu {
