--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -512,6 +512,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   isolation: isolate;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -551,6 +555,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0px;
 }
 
+.ml-0 {
+  margin-left: 0px;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -585,6 +593,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .hidden {
   display: none;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-1 {
@@ -645,6 +657,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 2px;
 }
 
+.border-beer {
+  --tw-border-opacity: 1;
+  border-color: rgb(232 180 62 / var(--tw-border-opacity));
+}
+
 .border-mustard {
   --tw-border-opacity: 1;
   border-color: rgb(240 218 106 / var(--tw-border-opacity));
@@ -655,14 +672,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(154 73 33 / var(--tw-border-opacity));
 }
 
-.border-beer {
-  --tw-border-opacity: 1;
-  border-color: rgb(232 180 62 / var(--tw-border-opacity));
-}
-
 .border-vine {
   --tw-border-opacity: 1;
   border-color: rgb(160 31 31 / var(--tw-border-opacity));
+}
+
+.bg-mustard {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 218 106 / var(--tw-bg-opacity));
+}
+
+.bg-main-yellow {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 209 66 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -735,6 +757,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-default {
   --tw-text-opacity: 1;
   color: rgb(80 80 80 / var(--tw-text-opacity));
+}
+
+.text-main-yellow {
+  --tw-text-opacity: 1;
+  color: rgb(255 209 66 / var(--tw-text-opacity));
 }
 
 .text-white {
