--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -1,3 +1,11 @@
-<svg class="icon icon-cart" aria-hidden="true" focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
-  <path fill="currentColor" fill-rule="evenodd" d="M20.5 6.5a4.75 4.75 0 00-4.75 4.75v.56h-3.16l-.77 11.6a5 5 0 004.99 5.34h7.38a5 5 0 004.99-5.33l-.77-11.6h-3.16v-.57A4.75 4.75 0 0020.5 6.5zm3.75 5.31v-.56a3.75 3.75 0 10-7.5 0v.56h7.5zm-7.5 1h7.5v.56a3.75 3.75 0 11-7.5 0v-.56zm-1 0v.56a4.75 4.75 0 109.5 0v-.56h2.22l.71 10.67a4 4 0 01-3.99 4.27h-7.38a4 4 0 01-4-4.27l.72-10.67h2.22z"/>
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 26.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 19.96 22.81" style="width: 20px;" xml:space="preserve">
+<path id="icon_awesome-shopping-bag" d="M15.68,7.13V5.7c0-3.15-2.55-5.7-5.7-5.7c-3.15,0-5.7,2.55-5.7,5.7v1.43H0
+	v12.12c0,1.97,1.6,3.56,3.56,3.56h12.83c1.97,0,3.56-1.6,3.56-3.56V7.13H15.68z M7.13,5.7c0.04-1.57,1.35-2.82,2.93-2.77
+	c1.52,0.04,2.73,1.26,2.77,2.77v1.43h-5.7V5.7z M14.25,11.04c-0.59,0-1.07-0.48-1.07-1.07c0-0.59,0.48-1.07,1.07-1.07
+	c0.59,0,1.07,0.48,1.07,1.07C15.32,10.57,14.85,11.05,14.25,11.04C14.26,11.05,14.25,11.05,14.25,11.04L14.25,11.04z M5.7,11.04
+	c-0.59,0-1.07-0.48-1.07-1.07c0-0.59,0.48-1.07,1.07-1.07c0.59,0,1.07,0.48,1.07,1.07c0,0,0,0,0,0C6.77,10.57,6.29,11.05,5.7,11.04
+	C5.7,11.05,5.7,11.05,5.7,11.04L5.7,11.04z"/>
 </svg>
