--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -17,14 +17,18 @@
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
+
+  .cart-item__image-container {
+    border: 2px solid rgba(255, 209, 66, 1);
+  }
 {%- endstyle -%}
 
 <script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
 
 <cart-items class="page-width{% if cart == empty %} is-empty{% else %} section-{{ section.id }}-padding{% endif %}">
   <div class="title-wrapper-with-link">
-    <h1 class="title title--primary">{{ 'sections.cart.title' | t }}</h1>
-    <a href="{{ routes.all_products_collection_url }}" class="underlined-link">{{ 'general.continue_shopping' | t }}</a>
+    <!-- <h1 class="title title--primary">{{ 'sections.cart.title' | t }}</h1> -->
+    <a href="{{ routes.all_products_collection_url }}" class="underlined-link text-xs">{{ 'general.continue_shopping' | t }}</a>
   </div>
 
   <div class="cart__warnings">
