--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -175,6 +175,31 @@
                       </svg>
                     </div>
                   </button>
+
+                  <button
+                    id="{{ product_form_id }}-submit"
+                    type="submit"
+                    name="buy"
+                    class="quick-buy__submit button button--full-width button--secondary "
+                    aria-haspopup="dialog"
+                    aria-labelledby="{{ product_form_id }}-submit title-{{ section_id }}-{{ card_product.id }}"
+                    aria-live="polite"
+                    data-sold-out-message="true"
+                    {% if card_product.selected_or_first_available_variant.available == false %}disabled{% endif %}
+                  >
+                    <span>
+                      {%- if card_product.selected_or_first_available_variant.available -%}
+                        Acheter maintenant
+                         {%- else -%}
+                        Acheter maintenant
+                      {%- endif -%}
+                    </span>
+                    <div class="loading-overlay__spinner hidden">
+                      <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+                      </svg>
+                    </div>
+                  </button>
                 {%- endform -%}
               </product-form>
             {%- else -%}
