--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -61,7 +61,9 @@
 
         --color-logo: {{ settings.colors_logo }};
         --color-logo-rgba: {{ settings.colors_logo.red }}, {{ settings.colors_logo.green }}, {{ settings.colors_logo.blue }};
-
+        --color-main: {{ settings.colors_main }};
+        --color-main-rgba: {{ settings.colors_main.red }}, {{ settings.colors_main.green }}, {{ settings.colors_main.blue }};
+        
         --color-neutral-background-button: {{ settings.colors_neutral_background_button.red }}, {{ settings.colors_neutral_background_button.green }}, {{ settings.colors_neutral_background_button.blue }};
         --color-neutral-text-button: {{ settings.colors_text_neutral_button.red }}, {{ settings.colors_text_neutral_button.green }}, {{ settings.colors_text_neutral_button.blue }};
         --color-text-default: {{ settings.colors_text_default.red }}, {{ settings.colors_text_default.green }}, {{ settings.colors_text_default.blue }};
