--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -6,7 +6,8 @@
   border-width: var(--popup-border-width);
   border-style: solid;
   border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
-  background-color: rgb(var(--color-background));
+  /* background-color: rgb(var(--color-background)); */
+  background-color: white;
   z-index: 3;
   border-bottom-right-radius: var(--popup-corner-radius);
   border-bottom-left-radius: var(--popup-corner-radius);
@@ -136,10 +137,10 @@ predictive-search[loading] .predictive-search__results-list:first-child {
   margin: 0;
 }
 
-.predictive-search__item .price {
+/* .predictive-search__item .price {
   color: rgba(var(--color-foreground), 0.7);
   font-size: 1.2rem;
-}
+} */
 
 .predictive-search__item-vendor + .predictive-search__item-heading,
 .predictive-search .price {
