--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -30,7 +30,7 @@
   endif
 -%}
 
-<div class="price
+<div class=" text-default font-bold price
   {%- if price_class %} {{ price_class }}{% endif -%}
   {%- if available == false %} price--sold-out {% endif -%}
   {%- if compare_at_price > price %} price--on-sale {% endif -%}
