--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -104,7 +104,8 @@
 
 .card__information {
   grid-row-start: 2;
-  padding: 1.3rem 1rem;
+  /* padding: 1.3rem 1rem; */
+  /* padding-bottom: 1; */
 }
 
 .card:not(.ratio) > .card__content {
@@ -113,7 +114,7 @@
 
 @media screen and (min-width: 750px) {
   .card__information {
-    padding-bottom: 1.7rem;
+    padding-bottom: 1rem;
     padding-top: 1.7rem;
   }
 }
