--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -555,6 +555,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -567,16 +575,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 3rem;
 }
 
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
 }
 
 .block {
@@ -611,6 +619,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -633,6 +645,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .justify-around {
   justify-content: space-around;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .truncate {
@@ -721,6 +737,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: center;
 }
 
+.align-middle {
+  vertical-align: middle;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -807,6 +827,30 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 475px) {
+  .phone\:ml-10 {
+    margin-left: 2.5rem;
+  }
+
+  .phone\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .phone\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .phone\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .phone\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .phone\:justify-between {
+    justify-content: space-between;
+  }
+
   .phone\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -821,6 +865,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:justify-between {
+    justify-content: space-between;
   }
 }
 
