--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -114,7 +114,7 @@
 
 @media screen and (min-width: 750px) {
   .card__information {
-    padding-bottom: 1rem;
+    /* padding-bottom: 1rem; */
     padding-top: 1.7rem;
   }
 }
