--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -527,6 +527,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 5rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -587,6 +597,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2.5rem;
 }
 
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -607,8 +633,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .flex-1 {
@@ -623,12 +669,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -649,6 +703,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .truncate {
@@ -697,6 +755,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(160 31 31 / var(--tw-border-opacity));
 }
 
+.border-logo {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 41 73 / var(--tw-border-opacity));
+}
+
+.border-opacity-0 {
+  --tw-border-opacity: 0;
+}
+
 .bg-main-yellow {
   --tw-bg-opacity: 1;
   background-color: rgb(255 209 66 / var(--tw-bg-opacity));
@@ -715,8 +782,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-repeat: no-repeat;
 }
 
+.fill-logo {
+  fill: #ff2949;
+}
+
 .p-12 {
   padding: 3rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-8 {
@@ -729,6 +804,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1.5rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -739,6 +834,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .align-middle {
   vertical-align: middle;
+}
+
+.align-bottom {
+  vertical-align: bottom;
 }
 
 .text-3xl {
@@ -827,6 +926,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 475px) {
+  .phone\:my-20 {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
   .phone\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -841,6 +945,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .phone\:ml-0 {
     margin-left: 0px;
+  }
+
+  .phone\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
+  .phone\:mt-4 {
+    margin-top: 1rem;
   }
 
   .phone\:grid-cols-2 {
