--- a/snippets/product-thumbnail.liquid
+++ b/snippets/product-thumbnail.liquid
@@ -24,7 +24,7 @@
 <noscript>
   {%- if media.media_type == 'video' or media.media_type == 'external_video' -%}
     <span class="product__media-icon motion-reduce quick-add-hidden">{% render 'icon-play' %}</span>
-    <div class="product__media media gradient global-media-settings {{border_color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
+    <div class="product__media media gradient global-media-settings {{color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
       <img
         srcset="{% if media.preview_image.width >= 493 %}{{ media.preview_image | image_url: width: 493 }} 493w,{% endif %}
           {% if media.preview_image.width >= 600 %}{{ media.preview_image | image_url: width: 600 }} 600w,{% endif %}
@@ -50,7 +50,7 @@
       <span class="visually-hidden">{{ 'products.product.video_exit_message' | t: title: product.title | escape }}</span>
     </a>
   {%- else -%}
-    <div class="product__media media gradient global-media-settings {{border_color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
+    <div class="product__media media gradient global-media-settings {{color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
       <img
         srcset="{% if media.preview_image.width >= 493 %}{{ media.preview_image | image_url: width: 493 }} 493w,{% endif %}
           {% if media.preview_image.width >= 600 %}{{ media.preview_image | image_url: width: 600 }} 600w,{% endif %}
@@ -89,7 +89,7 @@
     -%}
   </span>
 
-  <div class="product__media media media--transparent gradient global-media-settings {{border_color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
+  <div class="product__media media media--transparent gradient global-media-settings {{color}}" style="padding-top: {{ 1 | divided_by: media.preview_image.aspect_ratio | times: 100 }}%;">
     <img
       srcset="{% if media.preview_image.width >= 493 %}{{ media.preview_image | image_url: width: 493 }} 493w,{% endif %}
         {% if media.preview_image.width >= 600 %}{{ media.preview_image | image_url: width: 600 }} 600w,{% endif %}
@@ -120,9 +120,9 @@
 
 {%- if media.media_type != 'image' -%}
   {%- if media.media_type == 'model' -%}
-    <product-model class="deferred-media media media--transparent gradient global-media-settings {{border_color}} no-js-hidden" style="padding-top: 100%" data-media-id="{{ media.id }}">
+    <product-model class="deferred-media media media--transparent gradient global-media-settings {{color}} no-js-hidden" style="padding-top: 100%" data-media-id="{{ media.id }}">
   {%- else -%}
-    <deferred-media class="deferred-media gradient global-media-settings {{border_color}} media no-js-hidden" style="padding-top: {{ 1 | divided_by: media.aspect_ratio | times: 100 }}%" data-media-id="{{ media.id }}">
+    <deferred-media class="deferred-media gradient global-media-settings {{color}} media no-js-hidden" style="padding-top: {{ 1 | divided_by: media.aspect_ratio | times: 100 }}%" data-media-id="{{ media.id }}">
   {%- endif -%}
   <button id="Deferred-Poster-Modal-{{ media.id }}" class="deferred-media__poster" type="button">
     <span class="deferred-media__poster-button motion-reduce">
