--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -140,7 +140,7 @@
 
 .card__media .media img {
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center center;
   width: 100%;
 }
