--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -185,6 +185,10 @@
         {
           "value": "rectangle",
           "label": "Rectangle"
+        },
+        {
+          "value": "100%",
+          "label": "100%"
         }
       ],
       "default": "adapt",
