--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -27,7 +27,9 @@
     elsif card_product.featured_media and media_aspect_ratio == 'adapt'
       assign ratio = card_product.featured_media.aspect_ratio
     elsif card_product.featured_media and media_aspect_ratio == 'rectangle'
-      assign ratio=1.6
+      assign ratio = 1.6
+    elsif card_product.featured_media and media_aspect_ratio == '100%'
+      assign ratio = 1
     endif
 
     if ratio == 0 or ratio == nil
